fixtures/errors/object_prevent_extensions_proxy_false.js
const proxy = new Proxy({}, {
    preventExtensions() {
        console.log("preventExtensions trap called");
        return false;
    }
});

Object.preventExtensions(proxy);
